[package]
name = "tile_rpg"
version = "0.1.0"
authors = []
edition = "2018"
repository = "https://github.com/GreeFine/FonFine"

[features]
default = ["bevy/dynamic"]

[dependencies]
bevy = {version="0.5.0", default-features=true }
bevy_screen_diags = "0.2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
